@@ -54,6 +54,11 @@ attributes of zipfilesets in a Zip or Jar task.)</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">filesonly</td>
+    <td valign="top">Store only file entries, defaults to false</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">includes</td>
     <td valign="top">comma separated list of patterns of files that must be
       included. All files are included when omitted.</td>
